Add Iceberg tests with MinIO